--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,12 +25,25 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
+  padding: 0;
+  min-height: 100%;
+  width: 100%;
   font-family: var(--font-chinese);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior: none;
+}
+
+#root {
+  min-height: 100vh;
+  width: 100%;
 }
 
 /* 确保输入框在 iOS 上不会缩放 */
